// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BodyCopy /> renders base component correctly 1`] = `
<article
  className="base dark undefined"
  id="Anti-Oxidant"
>
  <header
    className="base"
    id="Anti-Oxidant"
  >
    <h2
      className="base noTopMargin mediumWeightFont xXSmall dark eyebrow eyebrow"
    >
      Recommended Nearby
    </h2>
    <h3
      className="base noTopMargin xLarge dark heading heading"
    >
      Aesop & The Paris Review: A Partnership Extended
    </h3>
    <h4
      className="base noTopMargin mediumWeightFont xSmall dark subHeading subHeading"
    >
      Active Nutrients
    </h4>
  </header>
  <div
    className="copy dark"
  >
    Parsley Seed Cream. [The Paris Review](http://theparisreview.org) Intensely soothing, nourishing and hydrating, this elegant formulation contains a potent blend of botanicals that offer fortification of the highest order against free radicals.
  </div>
  <div
    className="ctaWrapper"
  >
    <a
      className="base dark"
      href="http://aesop.com"
      target="_self"
    >
      Read more
    </a>
  </div>
</article>
`;

exports[`<BodyCopy /> renders promary title as an \`h2\` if no \`eyebrow\` or \`primaryTitle\` prop are passed 1`] = `
<article
  className="base dark undefined"
>
  <header
    className="base"
  >
    <h2
      className="base noTopMargin mediumWeightFont xSmall dark subHeading subHeading"
    >
      Aesop & The Paris Review: A Partnership Extended
    </h2>
  </header>
</article>
`;

exports[`<BodyCopy /> renders promary title as an \`h2\` if no \`eyebrow\` prop is passed 1`] = `
<article
  className="base dark undefined"
>
  <header
    className="base"
  >
    <h2
      className="base noTopMargin xLarge dark heading heading"
    >
      Aesop & The Paris Review: A Partnership Extended
    </h2>
  </header>
</article>
`;
